Refactor overall code